[gd_scene load_steps=14 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/mochi/mochi.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/environment/tiles/test_block.png" type="Texture" id=3]
[ext_resource path="res://assets/environment/tiles/test_tile.png" type="Texture" id=4]
[ext_resource path="res://enemy/nitori/nitori.tscn" type="PackedScene" id=5]
[ext_resource path="res://zone/test_zones/test_zone.gd" type="Script" id=7]
[ext_resource path="res://scripts/camera.gd" type="Script" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=3]
0/name = "test_block.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "test_tile.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 48 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 32 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 144 )

[node name="test_zone" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
show_collision = true
collision_mask = 0
format = 1
tile_data = PoolIntArray( -720899, 1, 0, -720898, 1, 0, -720897, 1, 0, -786432, 1, 0, -786431, 1, 0, -786430, 1, 0, -786429, 1, 0, -786428, 1, 0, -786427, 1, 0, -786426, 1, 0, -786425, 1, 0, -786424, 1, 0, -786423, 1, 0, -786422, 1, 0, -786421, 1, 0, -786420, 1, 0, -786419, 1, 0, -786418, 1, 0, -786417, 1, 0, -786416, 1, 0, -786415, 1, 0, -786414, 1, 0, -655363, 1, 0, -720878, 1, 0, -589827, 1, 0, -655342, 1, 0, -589806, 1, 0, -524270, 1, 0, -458734, 1, 0, -393198, 1, 0, -327662, 1, 0, -262126, 1, 0, -196590, 1, 0, -131054, 1, 0, -65518, 1, 0, 65512, 1, 0, 65513, 1, 0, 65514, 1, 0, 65515, 1, 0, 65516, 1, 0, 65517, 1, 0, 65518, 1, 0, 65519, 1, 0, 65520, 1, 0, 65521, 1, 0, 65522, 1, 0, 65523, 1, 0, 65524, 1, 0, 65525, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 131048, 1, 0, 131049, 1, 0, 131050, 1, 0, 131051, 1, 0, 131052, 1, 0, 131053, 1, 0, 131054, 1, 0, 131055, 1, 0, 131056, 1, 0, 131057, 1, 0, 131058, 1, 0, 131059, 1, 0, 131060, 1, 0, 131061, 1, 0, 131062, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 196584, 1, 0, 196585, 1, 0, 196586, 1, 0, 196587, 1, 0, 196588, 1, 0, 196589, 1, 0, 196590, 1, 0, 196591, 1, 0, 196592, 1, 0, 196593, 1, 0, 196594, 1, 0, 196595, 1, 0, 196596, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 262120, 1, 0, 262121, 1, 0, 262122, 1, 0, 262123, 1, 0, 262124, 1, 0, 262125, 1, 0, 262126, 1, 0, 262127, 1, 0, 262128, 1, 0, 262129, 1, 0, 262130, 1, 0, 262131, 1, 0, 262132, 1, 0, 262133, 1, 0, 262134, 1, 0, 262135, 1, 0, 262136, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0 )

[node name="mochi" parent="." instance=ExtResource( 2 )]
position = Vector2( -656, -64 )

[node name="nitori" parent="." instance=ExtResource( 5 )]
position = Vector2( 448, -288 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, -80 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 8 )

[node name="camera_limit_L" type="Position2D" parent="."]
position = Vector2( -768, -336 )
scale = Vector2( 3.25877, 5 )

[node name="camera_limit_R" type="Position2D" parent="."]
position = Vector2( 576, 32 )
scale = Vector2( 5, 5 )

[node name="initial_position" type="Position2D" parent="."]
position = Vector2( -304, -32 )

[node name="end_position" type="Position2D" parent="."]
position = Vector2( 666, -32 )

[node name="begin" type="Area2D" parent="."]
position = Vector2( -736, -48 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="begin"]
shape = SubResource( 4 )

[node name="end" type="Area2D" parent="."]
position = Vector2( 698, -48 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="end"]
shape = SubResource( 4 )

[node name="boss_limit_L" type="Position2D" parent="."]
position = Vector2( -96, -256 )
scale = Vector2( 2.52, 2.4409 )

[node name="boss_pos" type="Position2D" parent="."]
position = Vector2( 224, -160 )
scale = Vector2( 11.2896, 3.0976 )

[node name="boss_limit_R" type="Position2D" parent="."]
position = Vector2( 576, 0 )
scale = Vector2( 3.36, 1.76 )

[node name="boss_event" type="Area2D" parent="."]
position = Vector2( 256, -48 )
collision_layer = 512
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="boss_event"]
shape = SubResource( 5 )

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2( -80, -128 )
collision_mask = 128
__meta__ = {
"_edit_group_": true
}

[node name="shape" type="CollisionShape2D" parent="wall"]
shape = SubResource( 6 )
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="danmaku1" type="Position2D" parent="."]
position = Vector2( -64, -320 )

[node name="danmaku2" type="Position2D" parent="."]
position = Vector2( -160, -32 )

[node name="danmaku3" type="Position2D" parent="."]
position = Vector2( 640, -32 )

[connection signal="body_entered" from="boss_event" to="." method="_on_boss_event_body_entered"]
